--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                         <img src="./img/dgpsGps.jpeg" alt="">
                         <div class="mini-wrapper">
                             <h4 class="title">DGPS /GPS Static & Rtk Survey </h4>
-                            <a class="link link-arrow" href="single-service.html">
+                            <a class="link link-arrow" href="./nested_pages/dgps.html">
                                 Details
                                 <i class="icon-arrow_right icon"></i>
                             </a>
@@ -301,7 +301,7 @@
                         <img src="./img/gpr.jpeg" alt="">
                         <div class="mini-wrapper">
                             <h4 class="title">GPR Survey </h4>
-                            <a class="link link-arrow" href="single-service.html">
+                            <a class="link link-arrow" href="./nested_pages/gpr.html">
                                 Details
                                 <i class="icon-arrow_right icon"></i>
                             </a>
@@ -311,7 +311,7 @@
                         <img src="./img/hydrographic.jpeg" alt="">
                         <div class="mini-wrapper">
                             <h4 class="title">Hydrographic-Survey </h4>
-                            <a class="link link-arrow" href="single-service.html">
+                            <a class="link link-arrow" href="./nested_pages/hydrographic.html">
                                 Details
                                 <i class="icon-arrow_right icon"></i>
                             </a>
